--- a/src/index.css
+++ b/src/index.css
@@ -96,7 +96,7 @@ a {
   display: flex;
   flex-direction: column;
 }
-
+  
 input[type="text"],
 textarea {
   border: none;
@@ -105,8 +105,18 @@ textarea {
   /* outline: none; */
 }
 
-.checkbox {
+button {
+  background: none;
+  border: none;
   cursor: pointer;
+  color: var(--clr-text-400);
+  text-transform: capitalize;
+}
+button:hover {
+  color: var(--clr-primary);
+}
+
+.checkbox {
   border-radius: 50vh;
   height: 25px;
   width: 25px;
@@ -181,6 +191,10 @@ textarea {
   gap: var(--gap);
   align-items: center;
 
+  .checkbox {
+    aspect-ratio: 1 / 1;
+  }
+
   .text-input {
     width: 100%;
   }
@@ -203,7 +217,7 @@ textarea {
   p {
     /* font-size: 0.875rem; */
     flex: 1;
-    text-transform: capitalize;
+    /* text-transform: capitalize; */
     color: var(--clr-text-600);
     &.completed {
       color: var(--clr-text-200);
@@ -219,15 +233,10 @@ textarea {
 }
 
 .ext {
-  color: var(--clr-text-400);
   gap: var(--gap);
   font-weight: bold;
-  text-transform: capitalize;
 
-  span {
-    cursor: pointer;
-  }
-  span:hover {
+  button:hover {
     color: var(--clr-primary);
   }
 }
@@ -236,14 +245,16 @@ textarea {
   gap: var(--gap);
   padding: var(--padding);
   justify-content: space-between;
+  align-items: center;
 
-  span:not(:first-child) {
+  /* span:not(:first-child) {
     cursor: pointer;
     text-transform: capitalize;
-  }
+  } */
 
   .ext {
     @media (max-width: 539px) {
+      text-align: center;
       display: none;
     }
   }
